[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "selenium>=4.33.0",
    "twilio>=9.6.1",
    "webdriver-manager>=4.0.2",
    "yfinance>=0.2.61",
]
